Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/TestEnum3.out
TestEnum3.java:13:34: compiler.err.illegal.enum.static.ref
1 error
